gcc/testsuite/algol68/compile/error-widening-1.a68
# { dg-options "-fstropping=upper" }  #

BEGIN INT a := 10;
      LONG REAL l := a; # { dg-error "coerced" } #
      l
END
